# POO

./: CMakeLists.txt
Classe Empresa/: Cliente.cpp  Cliente.h  Funcionario.cpp  Funcionario.h  Pessoa.h  PessoaFisica.cpp  PessoaFisica.h  PessoaJuridica.cpp  PessoaJuridica.h
Classe Pessoa e derivadas/: Pessoa.cpp  Pessoa.h  PessoaFisica.h  PessoaJuridica.cpp
Classes/Classe Cliente/: CMakeLists.txt  Cliente.cpp  Cliente.h  Pessoa.cpp  Pessoa.h  PessoaFisica.cpp  PessoaFisica.h  main.cpp
Classes/Classe Empresa/: CMakeLists.txt  Cliente.h  Empresa.cpp  Empresa.h  Funcionario.h  Pessoa.cpp  Pessoa.h  PessoaFisica.cpp  PessoaFisica.h  PessoaJuridica.cpp  PessoaJuridica.h  main.cpp
Classes/Classe Funcionario/: CMakeLists.txt  Funcionario.cpp  Funcionario.h  Pessoa.cpp  PessoaFisica.cpp  PessoaFisica.h  main.cpp
Classes/Classe Imovel/: CMakeLists.txt  Imovel.cpp  Imovel.h  ImovelNovo.cpp  ImovelNovo.h  ImovelVelho.cpp  ImovelVelho.h  main.cpp
Classes/Classe IntegerSet/: IntegerSet.cpp  IntegerSet.h  main.cpp
Classes/Classe Pessoa e derivadas/: CMakeLists.txt  PessoaFisica.cpp  PessoaJuridica.h  main.cpp
